Updated FwBrowse grid CSS to address overflow issues

--- a/src/RentalWorksWeb/Libraries/Fw/theme/material/FwBrowse.css
+++ b/src/RentalWorksWeb/Libraries/Fw/theme/material/FwBrowse.css
@@ -1,4 +1,4 @@
-html.theme-material .fwbrowse .tablewrapper {overflow:auto;min-height:100px;}
+html.theme-material .fwbrowse .tablewrapper {overflow-x:auto; overflow-y:hidden;min-height:100px;}
 html.theme-material .fwbrowse td {vertical-align:top;}
 
 html.theme-material .fwbrowse[data-type="Browse"] .browsefilter {padding:10px;background-color: #FAFAFA;}
@@ -308,7 +308,7 @@ html.theme-material .fwbrowse .field[data-browsedatatype="appdocumentimage"] .vi
 html.theme-material .fwbrowse .field[data-browsedatatype="appdocumentimage"] .viewcell .col2 i {cursor:pointer;color:#F44336;font-size:16px;vertical-align:middle;}
 
 html.theme-material .fwbrowse table tbody td.flexgridspacer{width:26px;float:right;display:block !important;}
-html.theme-material .fwbrowse table tbody td.browsecontextmenucell{position:absolute;right:0px;padding-left:2px !important;}
+html.theme-material .fwbrowse table tbody td.browsecontextmenucell{position:absolute;right:0px;}
 html.theme-material .fwbrowse table tbody td.gridspacer{width:26px;float:left;display:block !important;}
 html.theme-material .fwbrowse table tbody td.tdselectrow{position:absolute;left:0px;padding-right:12px !important;z-index:1;}
 /********************
